2004-10-25  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Services.pm, PkgVersion.pm: support for growl notifications if
	Mac::Growl is available.

2004-10-25  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Use named constants for fink list/apropos option bits.

2004-10-22  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Fixed ignoring of null OR clusters in lol2pkglist.

2004-10-19  David Höhn <dmalloc@users.sourceforge.net>

	* Configure.pm: Use print_breaking for the extremely long
	prompt that used to be the proxy configure prompt. This is more
	readable and looks better.


2004-10-17  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: lol2pkglist code cleanup.

2004-10-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Engine.pm: Fix bug in code for broken gcc warning; also, add pause
	after warning.
	
2004-10-16  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Implemented pkglist2lol and lol2pkglist, to convert
	Depends-like fields between Debian string and a list-of-lists of
	pkgname atoms.
	* PkgVersion.pm: Convert conditional_pkg_list to use the new
	Services functions. Fix check for Depends:darwin to allow pkgnames
	to contain "darwin". Optimize BDO violation check.

2004-10-15  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: conditional_pkg_list: Fix parsing so no extra whitespace.

2004-10-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Engine.pm: Warn users with the broken gcc, whenever they compile
	something.
	
2004-10-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Add the broken-gcc package, currently detects
	XCode 1.5 build 1666.

2004-10-14  Christian Schaffner  <chris01@users.sourceforge.net>

	* Engine.pm: Introduce new column in the commands matrix indicating if
	  a command needs apt-get or apt-get with the --ignore-breakage option
	  if the UseBinaryDist option is enabled. This requirement is then 
	  checked before the command is executed. 