@@ -1,3 +1,9 @@
+2004-10-29  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* PkgVersion.pm, Validation.pm: Implemented AppBundles:
+	which does essentially what JarFiles does, copies an application
+	bundle to a known directory (%p/Applications)
+
 2004-10-25  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* Services.pm, PkgVersion.pm: support for growl notifications if
